welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: value count66 is not a member of Int
    else if (nums(i)==6 && nums(i+1)==7){count66 count66+1}
                                                 ^